<resources>
    <string name="app_name">Volley REST API</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_sale">Sale</string>
    <string name="title_event">Sự kiện</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="title_chat">Chat</string>
    <string name="title_user">Tài khoản</string>

    <string name="searchView_hint">Tìm kiếm sản phẩm</string>

</resources>