<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sale"
        android:icon="@drawable/icons8_sale_120_xxxhdpi"
        android:title="@string/title_sale" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/icons8_live_stream_96_xxxhdpi"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/icons8_chat_bubble_120xxxhdpi"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/icons8_buying_120_xxxhdpi"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/icons8_male_user_96xxxhdpi"
        android:title="@string/title_user" />

</menu>