<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sale">

    <fragment
        android:id="@+id/navigation_sale"
        android:name="com.tung.volleyrestapi.ui.sale.SaleFragment"
        android:label="@string/title_sale"
        tools:layout="@layout/fragment_sale" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.tung.volleyrestapi.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.tung.volleyrestapi.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>